--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div class="member">
               <div class="pic"><img src="img/team-2.jpg" alt=""></div>
               <h4>Tim Holthaus</h4>
-              <span>Industrial engineer in traffic</span>
+              <span>Economic transportation engineer</span>
               <span>Scientific employee at the <a href="https://www.gut.uni-wuppertal.de/de/mitarbeiter-innen/msc-tim-holthaus.html">BUW-University</a></span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
