--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
               <span>Economic transportation engineer</span>
               <span>Scientific employee at the <a href="https://www.gut.uni-wuppertal.de/de/mitarbeiter-innen/msc-tim-holthaus.html">BUW-University</a></span>
               <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-rss"></i></a>
-                <a href=""><i class="fa fa-xing"></i></a>
+                <a href="https://twitter.com/Lordlambda1"><i class="fa fa-twitter"></i></a>
+                <a href="blog.timholthaus.com"><i class="fa fa-rss"></i></a>
+                <a href="https://www.xing.com/profile/Tim_Holthaus"><i class="fa fa-xing"></i></a>
               </div>
             </div>
           </div>
