--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
             <div class="member">
               <div class="pic"><img src="img/team-1.jpg" alt=""></div>
               <h4>Radoje Stojisic</h4>
-              <span>Project founder and lead</span>
-              <span>Student at Hochschule Bochum</span>
+              <span>project founder and lead developer</span>
+              <span>CS student at <a href="https://hochschule-bochum.de">HSBO</a></span>
               <div class="social">
                 <a href="https://twitter.com/Radi123"><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-xing"></i></a>
@@ -247,8 +247,8 @@
             <div class="member">
               <div class="pic"><img src="img/team-2.jpg" alt=""></div>
               <h4>Tim Holthaus</h4>
-              <span>Economic transportation engineer</span>
-              <span>Scientific employee at the <a href="https://www.gut.uni-wuppertal.de/de/mitarbeiter-innen/msc-tim-holthaus.html">BUW-University</a></span>
+              <span>economic transportation engineer</span>
+              <span>scientific employee at the <a href="https://www.gut.uni-wuppertal.de/de/mitarbeiter-innen/msc-tim-holthaus.html">BUW-University</a></span>
               <div class="social">
                 <a href="https://twitter.com/Lordlambda1"><i class="fa fa-twitter"></i></a>
                 <a href="blog.timholthaus.com"><i class="fa fa-rss"></i></a>
@@ -300,7 +300,8 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>Mapdiscover</strong>. All Rights Reserved
+        &copy; Copyright <strong>Mapdiscover</strong>. All Rights Reserved </br>
+        imprint and credits
       </div>
       
     </div>
