--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               <span>scientific employee at the <a href="https://www.gut.uni-wuppertal.de/de/mitarbeiter-innen/msc-tim-holthaus.html">BUW-University</a></span>
               <div class="social">
                 <a href="https://twitter.com/Lordlambda1"><i class="fa fa-twitter"></i></a>
-                <a href="www.blog.timholthaus.com"><i class="fa fa-rss"></i></a>
+                <a href="https://lordlambda.spdns.de/wordpress/"><i class="fa fa-rss"></i></a>
                 <a href="https://www.xing.com/profile/Tim_Holthaus"><i class="fa fa-xing"></i></a>
               </div>
             </div>
