--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong>Mapdiscover</strong>. All Rights Reserved </br>
-        imprint and credits
+        <a href="imprint.html">imprint and credits</a>
       </div>
       
     </div>
