some re-aligments

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Welcome to Mapdiscover</h1>
-      <h2>Enjoy the power of most detailed map in the world</h2>
+      <h2>Enjoy the power of OpenStreetMap in new way</h2>
       <a href="#about" class="btn-get-started">Get Started</a>
     </div>
   </section><!-- #hero -->
@@ -247,7 +247,7 @@
             <div class="member">
               <div class="pic"><img src="img/team-2.jpg" alt=""></div>
               <h4>Tim Holthaus</h4>
-              <span>economic transportation engineer</span>
+              <span>scientific input and requirements</span>
               <span>scientific employee at the <a href="https://www.gut.uni-wuppertal.de/de/mitarbeiter-innen/msc-tim-holthaus.html">BUW-University</a></span>
               <div class="social">
                 <a href="https://twitter.com/Lordlambda1"><i class="fa fa-twitter"></i></a>
