some re-aligments

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Welcome to Mapdiscover</h1>
-      <h2>Enjoy the power of OpenStreetMap in new way</h2>
+      <h2>get in touch with the most detailed maps ever</h2>
       <a href="#about" class="btn-get-started">Get Started</a>
     </div>
   </section><!-- #hero -->
