Fixed responsive-design, added Soeren and Marcel

--- a/index.html
+++ b/index.html
@@ -232,20 +232,20 @@
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-1.jpg" alt=""></div>
+              <div class="pic"><img src="img/team-1.png" alt=""></div>
               <h4>Radoje Stojisic</h4>
               <span>project founder and lead developer</span>
               <span>CS student at <a href="https://hochschule-bochum.de">HSBO</a></span>
               <div class="social">
                 <a href="https://twitter.com/Radi123"><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-xing"></i></a>
-              </div>
+            </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-2.jpg" alt=""></div>
+              <div class="pic"><img src="img/team-2.png" alt=""></div>
               <h4>Tim Holthaus</h4>
               <span>scientific input and requirements</span>
               <span>scientific employee at the <a href="https://www.gut.uni-wuppertal.de/de/mitarbeiter-innen/msc-tim-holthaus.html">BUW-University</a></span>
@@ -253,7 +253,7 @@
                 <a href="https://twitter.com/Lordlambda1"><i class="fa fa-twitter"></i></a>
                 <a href="https://lordlambda.spdns.de/wordpress/"><i class="fa fa-rss"></i></a>
                 <a href="https://www.xing.com/profile/Tim_Holthaus"><i class="fa fa-xing"></i></a>
-              </div>
+             </div>
             </div>
           </div>
 
@@ -270,15 +270,39 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-4.jpg" alt=""></div>
+              <div class="pic"><img src="img/team-4.png" alt=""></div>
               <h4>Lara Buschhaus</h4>
               <span>Front end, UI design</span>
               <div class="social">
                 <a href="https://twitter.com/buu_lara"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.xing.com/profile/Lara_Buschhaus/cv"><i class="fa fa-xing"></i></a>
-              </div>
+             </div>
             </div>
           </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="img/team-5.svg" alt=""></div>
+              <h4>Marcel Singer</h4>
+              <span>Developer</span>
+              <span>CS student at <a href="https://hochschule-bochum.de">HSBO</a></span>
+              <div class="social">
+
+             </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="img/team-6.png" alt=""></div>
+              <h4>Sören</h4>
+              <span>Developer</span>
+              <div class="social">
+
+             </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
