--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-5.svg" alt=""></div>
+              <div class="pic"><img src="img/team-3.svg" alt=""></div>
               <h4>Marcel Singer</h4>
               <span>Developer</span>
               <span>CS student at <a href="https://hochschule-bochum.de">HSBO</a></span>
@@ -297,6 +297,18 @@
               <div class="pic"><img src="img/team-6.png" alt=""></div>
               <h4>Sören</h4>
               <span>Developer</span>
+              <div class="social">
+
+             </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="img/team-3.svg" alt=""></div>
+              <h4>Roland Fredenhagen</h4>
+              <span>Developer</span>
+              <span>CS student at <a href="https://www.uni-hamburg.de/">University Hamburg</a></span>
               <div class="social">
 
              </div>
