Fixed a symbol and commited the right index.html

--- a/index.html
+++ b/index.html
@@ -41,23 +41,6 @@
           <li><a href="#about">About Us</a></li>
           <li><a href="#services">Features</a></li>
           <li><a href="#team">Team</a></li>
-          <li class="menu-has-children"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="menu-has-children"><a href="#">Drop Down 2</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
-            </ul>
-          </li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -150,50 +133,50 @@
       <div class="container wow fadeIn">
         <div class="section-header">
           <h3 class="section-title">Features</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p class="section-description">The roadmap to MAPDISCOVER's virtues</p>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-desktop"></i></a></div>
+              <div class="icon"><a href=""><i class="fa fa-bus"></i></a></div>
               <h4 class="title"><a href="">Public transport</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-            <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-bar-chart"></i></a></div>
-              <h4 class="title"><a href="">Navigation</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-            <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-paper-plane"></i></a></div>
-              <h4 class="title"><a href="">Search</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-            <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-photo"></i></a></div>
-              <h4 class="title"><a href="">Embed</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description">Public-transport-routing in several regions, with more to come!</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
             <div class="box">
               <div class="icon"><a href=""><i class="fa fa-road"></i></a></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="">Navigation</a></h4>
+              <p class="description">On foot, riding a bike or driving a car - MAPDISCOVER guides you.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
             <div class="box">
+              <div class="icon"><a href=""><i class="fa fa-search"></i></a></div>
+              <h4 class="title"><a href="">Search</a></h4>
+              <p class="description">Find what you need, fast.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="box">
+              <div class="icon"><a href=""><i class="fa fa-desktop"></i></a></div>
+              <h4 class="title"><a href="">Embed</a></h4>
+              <p class="description">Use the most detaild map on your own site.</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+            <div class="box">
               <div class="icon"><a href=""><i class="fa fa-shopping-bag"></i></a></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title"><a href="">Your business</a></h4>
+              <p class="description">Add your own business to MAPDISCOVER and OpenStreetMap easily!</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+            <div class="box">
+              <div class="icon"><a href=""><i class="fa fa-image"></i></a></div>
+              <h4 class="title"><a href="">Feature 6</a></h4>
+              <p class="description">Feature 6 will be really, really great!</p>
             </div>
           </div>
         </div>
@@ -227,7 +210,7 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Team</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p class="section-description">We are MAPDISCOVER</p>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6">
@@ -261,7 +244,7 @@
             <div class="member">
               <div class="pic"><img src="img/team-3.svg" alt=""></div>
               <h4>Julian</h4>
-              <span>Backend Developer</span>
+              <span>backend-developer</span>
               <div class="social">
 
               </div>
@@ -272,7 +255,7 @@
             <div class="member">
               <div class="pic"><img src="img/team-4.png" alt=""></div>
               <h4>Lara Buschhaus</h4>
-              <span>Front end, UI design</span>
+              <span>front end, UI-design</span>
               <div class="social">
                 <a href="https://twitter.com/buu_lara"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.xing.com/profile/Lara_Buschhaus/cv"><i class="fa fa-xing"></i></a>
@@ -282,9 +265,9 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-5.svg" alt=""></div>
+              <div class="pic"><img src="img/team-3.svg" alt=""></div>
               <h4>Marcel Singer</h4>
-              <span>Developer</span>
+              <span>developer</span>
               <span>CS student at <a href="https://hochschule-bochum.de">HSBO</a></span>
               <div class="social">
 
@@ -296,15 +279,24 @@
             <div class="member">
               <div class="pic"><img src="img/team-6.png" alt=""></div>
               <h4>Sören</h4>
-              <span>Developer</span>
+              <span>developer</span>
               <div class="social">
 
              </div>
             </div>
           </div>
 
-        </div>
+           <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="img/team-3.svg" alt=""></div>
+              <h4>Roland Fredenhagen</h4>
+              <span>developer</span>
+              <span>CS student at <a href="https://hochschule-bochum.de">HSBO</a></span>
+              <div class="social">
 
+             </div>
+            </div>
+          </div>
       </div>
     </section><!-- #team -->
 
