Added feature 6: Extensible, changed order of features

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">89</span>
+            <span data-toggle="counter-up">382100</span>
             <p>streets</p>
   				</div>
 
@@ -136,20 +136,23 @@
           <p class="section-description">The roadmap to MAPDISCOVER's virtues</p>
         </div>
         <div class="row">
+
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-bus"></i></a></div>
-              <h4 class="title"><a href="">Public transport</a></h4>
-              <p class="description">Public-transport-routing in several regions, with more to come!</p>
+              <div class="icon"><a href=""><i class="fa fa-desktop"></i></a></div>
+              <h4 class="title"><a href="">Embed</a></h4>
+              <p class="description">Use the most detailed map on your own site.</p>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-road"></i></a></div>
-              <h4 class="title"><a href="">Navigation</a></h4>
-              <p class="description">On foot, riding a bike or driving a car - MAPDISCOVER guides you.</p>
+              <div class="icon"><a href=""><i class="fa fa-shopping-bag"></i></a></div>
+              <h4 class="title"><a href="">Your business</a></h4>
+              <p class="description">Add your own business to MAPDISCOVER and OpenStreetMap easily!</p>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
             <div class="box">
               <div class="icon"><a href=""><i class="fa fa-search"></i></a></div>
@@ -160,25 +163,28 @@
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-desktop"></i></a></div>
-              <h4 class="title"><a href="">Embed</a></h4>
-              <p class="description">Use the most detaild map on your own site.</p>
+              <div class="icon"><a href=""><i class="fa fa-bus"></i></a></div>
+              <h4 class="title"><a href="">Public transport</a></h4>
+              <p class="description">Public-transport-routing in several regions, with more to come!</p>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-shopping-bag"></i></a></div>
-              <h4 class="title"><a href="">Your business</a></h4>
-              <p class="description">Add your own business to MAPDISCOVER and OpenStreetMap easily!</p>
+              <div class="icon"><a href=""><i class="fa fa-road"></i></a></div>
+              <h4 class="title"><a href="">Navigation</a></h4>
+              <p class="description">On foot, riding a bike or driving a car - MAPDISCOVER guides you.</p>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-image"></i></a></div>
-              <h4 class="title"><a href="">Feature 6</a></h4>
-              <p class="description">Feature 6 will be really, really great!</p>
+              <div class="icon"><a href=""><i class="fa fa-cog"></i></a></div>
+              <h4 class="title"><a href="">Extensible</a></h4>
+              <p class="description">Customise MAPDISCOVER according to your needs.</p>
             </div>
           </div>
+
         </div>
 
       </div>
