added supporter screen

--- a/index.html
+++ b/index.html
@@ -306,6 +306,27 @@
       </div>
     </section><!-- #team -->
 
+    <section id="support">
+      <div class="container wow fadeInUp">
+        <div class="section-header">
+          <h3 class="section-title">Supporter</h3>
+          <p class="section-description">We are supported by the following institutes</p>
+        </div>
+        <div class="row">
+          <div class="col-lg-9">
+            <div class="member">
+              <div class="pic"><img src="img/buw.svg" alt=""></div>
+              <h4>BERGISCHE UNIVERSITÄT WUPPERTAL</h4>
+              <span>project founder and lead developer</span>
+              <span>CS student at <a href="https://hochschule-bochum.de">HSBO</a></span>
+              <div class="social">
+                <a href="https://twitter.com/Radi123"><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-xing"></i></a>
+              </div>
+            </div>
+          </div>
+
+    </section><!-- #team -->
 
 
   </main>
