added supporter screen

--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
             <div class="member">
               <div class="pic"><img src="img/buw.svg" alt=""></div>
               <h4>BERGISCHE UNIVERSITÄT WUPPERTAL</h4>
-              <span>project founder and lead developer</span>
-              <span>CS student at <a href="https://hochschule-bochum.de">HSBO</a></span>
+              <span>BLALBA1</span>
+              <span>BLABLA2 <a href="https://hochschule-bochum.de">HSBO</a></span>
               <div class="social">
                 <a href="https://twitter.com/Radi123"><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-xing"></i></a>
