--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">382100</span>
-            <p>streets</p>
+            <p>million streets</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">13430</span>
-            <p>Point of Interests</p>
+            <p>million point of interests</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
@@ -313,18 +313,28 @@
           <p class="section-description">We are supported by the following institutes</p>
         </div>
         <div class="row">
-          <div class="col-lg-9">
+          <div class="col-lg-3 col-md-3">
             <div class="member">
               <div class="pic"><img src="img/buw.svg" alt=""></div>
               <h4>BERGISCHE UNIVERSITÄT WUPPERTAL</h4>
-              <span>BLALBA1</span>
-              <span>BLABLA2 <a href="https://hochschule-bochum.de">HSBO</a></span>
-              <div class="social">
-                <a href="https://twitter.com/Radi123"><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-xing"></i></a>
-              </div>
             </div>
           </div>
+
+          <div class="row">
+            <div class="col-lg-3 col-md-3">
+              <div class="member">
+                <div class="pic"><img src="img/hsbo.svg" alt=""></div>
+                <h4>HOCHSCHULE BOCHUM</h4>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-3 col-md-3">
+                <div class="member">
+                  <div class="pic"><img src="img/osm.svg" alt=""></div>
+                  <h4>OPENSTREETMAP</h4>
+                </div>
+              </div>
 
     </section><!-- #team -->
 
