--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
         </div>
         <div class="row">
 
+          <!-- Some changes -->
+
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="box">
               <div class="icon"><a href=""><i class="fa fa-desktop"></i></a></div>
