Supporter-Section looks nicer now

--- a/index.html
+++ b/index.html
@@ -223,20 +223,20 @@
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-1.png" alt=""></div>
+              <div class="pic"><img src="img/team-1.png" alt="Radoje Stojisic"></div>
               <h4>Radoje Stojisic</h4>
               <span>project founder and lead developer</span>
               <span>CS student at <a href="https://hochschule-bochum.de">HSBO</a></span>
               <div class="social">
                 <a href="https://twitter.com/Radi123"><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-xing"></i></a>
-            </div>
+              </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-2.png" alt=""></div>
+              <div class="pic"><img src="img/team-2.png" alt="Tim Holthaus"></div>
               <h4>Tim Holthaus</h4>
               <span>scientific input and requirements</span>
               <span>scientific employee at the <a href="https://www.gut.uni-wuppertal.de/de/mitarbeiter-innen/msc-tim-holthaus.html">BUW-University</a></span>
@@ -250,7 +250,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-3.svg" alt=""></div>
+              <div class="pic"><img src="img/team-3.svg" alt="Julian"></div>
               <h4>Julian</h4>
               <span>backend-developer</span>
               <div class="social">
@@ -261,7 +261,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-4.png" alt=""></div>
+              <div class="pic"><img src="img/team-4.png" alt="Lara Buschhaus"></div>
               <h4>Lara Buschhaus</h4>
               <span>front end, UI-design</span>
               <div class="social">
@@ -273,7 +273,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-3.svg" alt=""></div>
+              <div class="pic"><img src="img/team-3.svg" alt="Marcel Singer"></div>
               <h4>Marcel Singer</h4>
               <span>developer</span>
               <span>CS student at <a href="https://hochschule-bochum.de">HSBO</a></span>
@@ -285,7 +285,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-6.png" alt=""></div>
+              <div class="pic"><img src="img/team-6.png" alt="Sören"></div>
               <h4>Sören</h4>
               <span>developer</span>
               <div class="social">
@@ -296,7 +296,7 @@
 
            <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-3.svg" alt=""></div>
+              <div class="pic"><img src="img/team-3.svg" alt="Roland Fredenhagen"></div>
               <h4>Roland Fredenhagen</h4>
               <span>developer</span>
               <span>CS student at <a href="https://www.uni-hamburg.de/en/">Universität Hamburg</a></span>
@@ -314,32 +314,39 @@
           <h3 class="section-title">Supporter</h3>
           <p class="section-description">We are supported by the following institutes</p>
         </div>
+
         <div class="row">
+
           <div class="col-lg-3 col-md-3">
-            <div class="member">
-              <div class="pic"><img src="img/buw.svg" alt=""></div>
+            <div class="institute">
+              <div class="pic">
+            	  <img src="img/hsbo.svg" alt="Hochschule Bochum">
+              </div>
+              <h4>HOCHSCHULE<br />BOCHUM</h4>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-3">
+            <div class="institute">
+              <div class="pic">
+            	  <img src="img/buw.svg" alt="Bergische Universität Wuppertal">
+              </div>
               <h4>BERGISCHE UNIVERSITÄT WUPPERTAL</h4>
             </div>
           </div>
 
-          <div class="row">
-            <div class="col-lg-3 col-md-3">
-              <div class="member">
-                <div class="pic"><img src="img/hsbo.svg" alt=""></div>
-                <h4>HOCHSCHULE BOCHUM</h4>
+          <div class="col-lg-3 col-md-3">
+            <div class="institute">
+              <div class="pic">
+            	  <img src="img/osm.svg" alt="Openstreetmap">
               </div>
+       	      <h4>OPENSTREETMAP</h4>
             </div>
+          </div>
 
-            <div class="row">
-              <div class="col-lg-3 col-md-3">
-                <div class="member">
-                  <div class="pic"><img src="img/osm.svg" alt=""></div>
-                  <h4>OPENSTREETMAP</h4>
-                </div>
-              </div>
-
-    </section><!-- #team -->
-
+        </div>
+      </div>
+    </section><!-- #support -->
 
   </main>
 
