Added Nav-Item Support

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <li><a href="#about">About Us</a></li>
           <li><a href="#services">Features</a></li>
           <li><a href="#team">Team</a></li>
+          <li><a href="#support">Support</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -311,7 +312,7 @@
     <section id="support">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h3 class="section-title">Supporter</h3>
+          <h3 class="section-title">Support</h3>
           <p class="section-description">We are supported by the following institutes</p>
         </div>
 
@@ -322,7 +323,7 @@
               <div class="pic">
             	  <img src="img/hsbo.svg" alt="Hochschule Bochum">
               </div>
-              <h4>HOCHSCHULE<br />BOCHUM</h4>
+              <!--<h4>HOCHSCHULE<br />BOCHUM</h4>-->
             </div>
           </div>
 
@@ -331,7 +332,7 @@
               <div class="pic">
             	  <img src="img/buw.svg" alt="Bergische Universität Wuppertal">
               </div>
-              <h4>BERGISCHE UNIVERSITÄT WUPPERTAL</h4>
+              <!--<h4>BERGISCHE UNIVERSITÄT WUPPERTAL</h4>-->
             </div>
           </div>
 
@@ -340,7 +341,7 @@
               <div class="pic">
             	  <img src="img/osm.svg" alt="Openstreetmap">
               </div>
-       	      <h4>OPENSTREETMAP</h4>
+       	      <!--<h4>OPENSTREETMAP</h4>-->
             </div>
           </div>
 
