Minor changes to imprint

--- a/imprint.html
+++ b/imprint.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<h2> Impressum </h2>
-<a> Wir sind eine Gemmeinützige Organisation. Wir haben kein Businessmodell. </a>
+<h2>Impressum</h2>
+<span>Wir sind eine gemeinnützige Organisation. Wir haben kein Businessmodell.</span>
 
 <h2>Datenschutz</h2>
 
@@ -29,8 +29,6 @@ Bedenken Sie, dass die Datenübertragung im Internet grundsätzlich mit Sicherhe
 
 <h3>Verantwortliche Stelle für die Datenerhebung ist</h3>
 
-</br>
-</br>
 Radoje Stojisic </br>
 Eickeler Str. 62 </br>
 44651 Herne </br>
@@ -43,7 +41,7 @@ E-Mail-Adresse: r.info@posteo.ee
 </br>
 </br>
 
-Sie haben jederzeit ein Recht auf kostenlose Auskunft, Berichtigung, Sperrung und ggf. Löschung Ihrer gespeicherten Daten. Bitte wenden Sie sich an info@timholthaus.com oder senden Sie uns Ihr Verlangen per Post. Wir geben Ihre personenbezogenen Daten einschließlich Ihrer E-Mail-Adresse nicht ohne Ihre ausdrückliche und jederzeit widerrufliche Einwilligung an Dritte weiter. Sie haben jederzeit ein Recht auf kostenlose Auskunft, Berichtigung, Sperrung und ggf. Löschung Ihrer gespeicherten Daten. Bitte wenden Sie sich an info@timholthaus.com oder senden Sie uns Ihr Verlangen per Post oder Fax.
+Sie haben jederzeit ein Recht auf kostenlose Auskunft, Berichtigung, Sperrung und ggf. Löschung Ihrer gespeicherten Daten. Bitte wenden Sie sich an r.info@posteo.ee oder senden Sie uns Ihr Verlangen per Post. Wir geben Ihre personenbezogenen Daten einschließlich Ihrer E-Mail-Adresse nicht ohne Ihre ausdrückliche und jederzeit widerrufliche Einwilligung an Dritte weiter. Sie haben jederzeit ein Recht auf kostenlose Auskunft, Berichtigung, Sperrung und ggf. Löschung Ihrer gespeicherten Daten. Bitte wenden Sie sich an info@timholthaus.com oder senden Sie uns Ihr Verlangen per Post oder Fax.
 Ihre persönlichen Daten werden, wenn beidseitig verfügbar, verschlüsselt übertragen (SSL). Wir setzen technische und organisatorische Sicherheitsmaßnahmen ein, um Ihre durch uns verwalteten Daten gegen zufällige oder vorsätzliche Manipulationen, Verlust, Zerstörung oder gegen den Zugriff unberechtigter Personen zu schützen.
 
 <h3>Zugriffsdaten</h3>
