Open social links in new tabs

--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
               <span>project founder and lead developer</span>
               <span>CS student at <a href="https://hochschule-bochum.de">HSBO</a></span>
               <div class="social">
-                <a href="https://twitter.com/Radi123"><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-xing"></i></a>
+                <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Radi123"><i class="fa fa-twitter"></i></a>
+                <a target="_blank" rel="noopener noreferrer" href=""><i class="fa fa-xing"></i></a>
               </div>
             </div>
           </div>
@@ -242,9 +242,9 @@
               <span>scientific input and requirements</span>
               <span>scientific employee at the <a href="https://www.gut.uni-wuppertal.de/de/mitarbeiter-innen/msc-tim-holthaus.html">BUW-University</a></span>
               <div class="social">
-                <a href="https://twitter.com/Lordlambda1"><i class="fa fa-twitter"></i></a>
-                <a href="https://lordlambda.spdns.de/wordpress/"><i class="fa fa-rss"></i></a>
-                <a href="https://www.xing.com/profile/Tim_Holthaus"><i class="fa fa-xing"></i></a>
+                <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Lordlambda1"><i class="fa fa-twitter"></i></a>
+                <a target="_blank" rel="noopener noreferrer" href="https://lordlambda.spdns.de/wordpress/"><i class="fa fa-rss"></i></a>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.xing.com/profile/Tim_Holthaus"><i class="fa fa-xing"></i></a>
              </div>
             </div>
           </div>
@@ -266,8 +266,8 @@
               <h4>Lara Buschhaus</h4>
               <span>front end, UI-design</span>
               <div class="social">
-                <a href="https://twitter.com/buu_lara"><i class="fa fa-twitter"></i></a>
-                <a href="https://www.xing.com/profile/Lara_Buschhaus/cv"><i class="fa fa-xing"></i></a>
+                <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/buu_lara"><i class="fa fa-twitter"></i></a>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.xing.com/profile/Lara_Buschhaus/cv"><i class="fa fa-xing"></i></a>
              </div>
             </div>
           </div>
@@ -277,7 +277,7 @@
               <div class="pic"><img src="img/team-3.svg" alt="Marcel Singer"></div>
               <h4>Marcel Singer</h4>
               <span>developer</span>
-              <span>CS student at <a href="https://hochschule-bochum.de">HSBO</a></span>
+              <span>CS student at <a target="_blank" rel="noopener noreferrer" href="https://hochschule-bochum.de">HSBO</a></span>
               <div class="social">
 
              </div>
