Removed facts-section until we have proper data

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
           <li><a href="#about">About Us</a></li>
+          <!--<li><a href="#facts">Facts</a></li>-->
           <li><a href="#services">Features</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#support">Support</a></li>
@@ -96,6 +97,7 @@
     </section><!-- #about -->
 
 
+    <!--- Get real data, then re-add this section and entry "facts" in navigation
     <section id="facts">
       <div class="container wow fadeIn">
         <div class="section-header">
@@ -127,8 +129,7 @@
   			</div>
 
       </div>
-    </section><!-- #dd -->
-
+    </section>--><!-- #dd -->
 
     <section id="services">
       <div class="container wow fadeIn">
