--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </section><!-- #about -->
 
 
-    <!--- Get real data, then re-add this section and entry "facts" in navigation
+
     <section id="facts">
       <div class="container wow fadeIn">
         <div class="section-header">
@@ -107,30 +107,30 @@
         <div class="row counters">
 
   				<div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">643</span>
+            <span data-toggle="counter-up">351</span>
             <p>million buildings</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">382100</span>
+            <span data-toggle="counter-up">150</span>
             <p>million streets</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">13430</span>
+            <span data-toggle="counter-up">351</span>
             <p>million point of interests</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">1</span>
-            <p>million mappers</p>
+            <span data-toggle="counter-up">300</span>
+            <p>thousend mappers</p>
   				</div>
 
   			</div>
 
       </div>
-    </section>--><!-- #dd -->
-
+    </section>
+    
     <section id="services">
       <div class="container wow fadeIn">
         <div class="section-header">
