--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">351</span>
-            <p>million point of interests</p>
+            <span data-toggle="counter-up">3</span>
+            <p>billion point of interests</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
