--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
           <li><a href="#about">About Us</a></li>
-          <!--<li><a href="#facts">Facts</a></li>-->
           <li><a href="#services">Features</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#support">Support</a></li>
@@ -118,12 +117,12 @@
 
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">3</span>
-            <p>billion point of interests</p>
+            <p>billion points of interest</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">300</span>
-            <p>thousend mappers</p>
+            <p>thousand mappers</p>
   				</div>
 
   			</div>
