--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <p class="cta-text"> Join us? :D</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Call To Action</a>
+            <a class="cta-btn align-middle" target='_blank' href="https://t.me/mapdiscover">Join us via Telegram</a>
           </div>
         </div>
 
