--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3 class="cta-title">Call To Action</h3>
-            <p class="cta-text"> Join us? :D</p>
+            <p class="cta-text"> Join us?</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" target='_blank' href="https://t.me/mapdiscover">Join us via Telegram</a>
