--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
   <meta content="" name="keywords">
   <meta content="" name="description">
 
-  <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- Favicons and compatibility with a lot of devices and browsers -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/meta/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/meta/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/meta/favicon-16x16.png">
+  <link rel="manifest" href="/meta/site.webmanifest">
+  <link rel="mask-icon" href="/meta/safari-pinned-tab.svg" color="#2e8dbc">
+  <link rel="shortcut icon" href="/meta/favicon.ico">
+  <meta name="apple-mobile-web-app-title" content="MapDiscover">
+  <meta name="application-name" content="MapDiscover">
+  <meta name="msapplication-TileColor" content="#2e8dbc">
+  <meta name="msapplication-config" content="/meta/browserconfig.xml">
+  <meta name="theme-color" content="#2e8dbc">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
